crates/ty_server/tests/e2e/tsp/snapshots/e2e__tsp__get_type__get_type_attribute_access.snap
---
source: crates/ty_server/tests/e2e/tsp/get_type.rs
expression: normalize_for_snapshot(attribute_result)
---
{
  "aliasName": null,
  "category": 5,
  "categoryFlags": 0,
  "flags": 0,
  "handle": "test_handle_Union",
  "moduleName": {
    "leadingDots": 0,
    "nameParts": [
      "typing"
    ]
  },
  "name": "Union"
}
