crates/ty_server/tests/e2e/tsp/snapshots/e2e__tsp__get_type__get_type_class_instance.snap
---
source: crates/ty_server/tests/e2e/tsp/get_type.rs
expression: normalize_for_snapshot(instance_result)
---
{
  "aliasName": null,
  "category": 3,
  "categoryFlags": 0,
  "flags": 1,
  "handle": "test_handle_tuple",
  "name": "tuple"
}
